# sway

./: .build.yml  .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  CMakeLists.txt  CNAME  CONTRIBUTING.md  DEPENDENCIES.md  Doxyfile  HACKING.md  ISSUE_TEMPLATE.md  LICENSE  README.Swea.md  README.ar.md  README.az.md  README.bg.md  README.cs.md  README.cz.md  README.de.md  README.dk.md  README.el.md  README.es.md  README.es_AR.md  README.fa.md  README.fr.md  README.ge.md  README.gr.md  README.hi.md  README.hn.md  README.hu.md  README.id.md  README.ir.md  README.it.md  README.ja.md  README.ko.md  (+37 more)
common/: CMakeLists.txt  background-image.c  cairo.c  gesture.c  ipc-client.c  list.c  log.c  loop.c  meson.build  pango.c  readline.c  sfdo.c  shexp.c  stringop.c  unicode.c  util.c
completions/: meson.build
completions/bash/: sway  swaybar  swayidle  swaylock  swaymsg
completions/fish/: sway.fish  swayidle.fish  swaylock.fish  swaymsg.fish  swaynag.fish
completions/pwsh/: sway.ps1  swaymsg.ps1  swaynag.ps1
completions/zsh/: CMakeLists.txt  _sway  _swaybar  _swaygrab  _swayidle  _swaylock  _swaymsg
protocols/: CMakeLists.txt  desktop-shell.xml  ext-action-binder-v1.xml  gamma-control.xml  kde-lockscreen-overlay-v1.xml  meson.build  swaylock.xml  wlr-input-inhibitor-unstable-v1.xml  wlr-layer-shell-unstable-v1.xml  wlr-output-power-management-unstable-v1.xml  wp-screenlocker-unstable-v1.xml  xdg-shell.xml
sway/: CMakeLists.txt  action-binder-v1.c  base64.c  border.c  children  commands.c  commands.h  config.c  config.h  container.c  container.h  criteria.c  debug-tree.c  debug_log.c  decoration.c  env.c  extensions.c  focus.c  handlers.c  handlers.h  idle.c  input.c  input_state.c  ipc-i3.c  ipc-json.c  ipc-server.c  ipc-sway.c  ipc.c  key_state.c  layout.c  layout.h  list.c  list.h  lock.c  lockscreen-overlay.c  log.c  log.h  main.c  meson.build  meta-keymap-utils.c  (+37 more)
sway/commands/: action.c  allow_tearing.c  always_hide_tab.c  append_layout.c  assign.c  assign_parent_workspace.c  backend.c  bar.c  bind.c  border.c  border_images.c  client.c  clipboard.c  color.c  commands.c  corner_radius.c  create_output.c  debug.c  debuglog.c  default_border.c  default_dim_inactive.c  default_floating_border.c  default_orientation.c  default_stacking_titlebar.c  dim_inactive.c  dim_inactive_colors.c  disable_titlebar.c  drag_mode.c  emit.c  env.c  exec.c  exec_always.c  exec_output.c  exit.c  export.c  floating.c  floating_default_size.c  floating_maximum_size.c  floating_minimum_size.c  floating_minmax_size.c  (+102 more)
sway/commands/backend/: add.c  del.c
sway/commands/bar/: activate_button.c  bind.c  binding_mode_indicator.c  bindsym.c  colors.c  context_button.c  font.c  gaps.c  gesture.c  height.c  hidden_state.c  icon_theme.c  id.c  mode.c  modifier.c  mouse_scroll_workspaces.c  output.c  pango_markup.c  position.c  secondary_button.c  separator_symbol.c  status_command.c  status_edge_padding.c  status_padding.c  strip_workspace_name.c  strip_workspace_numbers.c  swaybar_command.c  tray_bind.c  tray_bindsym.c  tray_last.c  tray_output.c  tray_padding.c  window_title.c  workspace_buttons.c  workspace_buttons_all_outputs.c  workspace_min_width.c  wrap_scroll.c
sway/commands/input/: accel_profile.c  calibration_matrix.c  click_method.c  clickfinger_button_map.c  drag.c  drag_lock.c  dwt.c  dwtp.c  events.c  left_handed.c  map_from_region.c  map_to_output.c  map_to_region.c  middle_emulation.c  natural_scroll.c  pointer_accel.c  repeat.c  repeat_delay.c  repeat_rate.c  rotation_angle.c  scroll_button.c  scroll_button_lock.c  scroll_factor.c  scroll_method.c  seat.c  sensitivity.c  tap.c  tap_button_map.c  three_finger_drag.c  tool_mode.c  transform.c  (+10 more)
sway/config/: bar.c  bg.c  gesture.c  input.c  output.c  seat.c  target.c
sway/desktop/: desktop.c  fx_renderer.c  idle_inhibit_v1.c  launcher.c  layer_shell.c  mirror.c  opengl.c  output.c  render.c  surface.c  tearing.c  transaction.c  wl_shell.c  xdg_shell.c  xdg_shell_v6.c  xwayland.c
sway/doc/: sway-bar.5.scd  sway-input.5.scd  sway-output.5.scd  sway.1.scd
sway/input/: cursor.c  input-manager.c  input.c  keyboard.c  libinput.c  seat.c  seatop_default.c  seatop_down.c  seatop_move_floating.c  seatop_move_tiling.c  seatop_resize_floating.c  seatop_resize_tiling.c  switch.c  tablet.c  text_input.c
sway/man/: sway-bar.5.txt  sway-input.5.txt  sway-security.7.txt  sway.1.fr.txt  sway.1.ja.txt  sway.1.txt  sway.5.txt
sway/old/: commands.c  config.c  criteria.c  focus.c  handlers.c  input_state.c  ipc-json.c  ipc-server.c  output.c
sway/test/: log_stub.c  test_config.c
sway/tree/: arrange.c  container.c  layout.c  load_layout.c  node.c  output.c  root.c  view.c  workspace.c
swaybar/: CMakeLists.txt  bar.c  bar.h  config.c  config.h  desktop.c  desktop.h  event_loop.c  i3bar.c  icon.c  image.c  input.c  ipc.c  ipc.h  main.c  meson.build  render.c  render.h  state.c  state.h  status_line.c  status_line.h  swaybar-protocol.7.scd
swaybar/tray/: dbus.c  dbusmenu.c  host.c  icon.c  item.c  menu.c  sni.c  sni_host.c  sni_watcher.c  tray.c  watcher.c
swaybg/: CMakeLists.txt  main.c  meson.build  render.c  swaybg.1.scd
swaygrab/: CMakeLists.txt  json.c  main.c  swaygrab.1.txt
swaygrab/man/: swaygrab.1.txt
swayidle/: main.c  meson.build  swayidle.1.scd  swayidle.1.txt
swaylock/: CMakeLists.txt  main.c  meson.build  pam.c  password.c  render.c  seat.c  shadow.c  swaylock.1.scd  swaylock.1.txt
swaylock/man/: swaylock.1.fr.txt  swaylock.1.txt
swaylock/pam/: swaylock  swaylock.freebsd  swaylock.linux
swaymsg/: CMakeLists.txt  main.c  meson.build  swaymsg.1.scd  swaymsg.1.txt
swaymsg/man/: swaymsg.1.fr.txt  swaymsg.1.txt
swaynag/: config.c  main.c  meson.build  nagbar.c  render.c  swaynag.1.scd  swaynag.5.scd  swaynag.c  types.c
swaynag/doc/: swaynag.1.scd
systemd/: 10-systemd  meson.build  sway-session.target
test/: CMakeLists.txt  runner  util.c
test/common/: CMakeLists.txt
wayland/: CMakeLists.txt  buffers.c  cairo.c  client.c  pango.c  registry.c  window.c
(+378 files in other folders)
